--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </a>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Homeqqqq</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Kontakt</a>
