--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr">
+<html lang="de" dir="ltr">
     <head>
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
