--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <title>Fadinger Ball 2023</title>
+	<link rel="icon" type="image/png" href="images/f.png"/>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
