--- a/sponsorings.html
+++ b/sponsorings.html
@@ -104,6 +104,24 @@
 
         <div id="infos" style="font-weight: bold; margin-bottom: 50px;">Unsere Sponsoren</div>
 
+        <a href="https://alfasolutions.at/">
+            <img src="images/11.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+        </a>
+        <a href="https://www.gynaekologie-steiger.at/">
+            <img src="images/9.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+        </a>
+        <a href="https://www.raiffeisen.at/de/privatkunden.html">
+            <img src="images/Raiffeisen.svg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+        </a>
+        <a href="https://hnw-rechtsanwaelte.at/">
+            <img src="images/1.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+        </a>
+        <a href="http://www.tb-mondi.at/">
+            <img src="images/5.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+        </a>
+
+
+
         <a href="https://www.wsg.at/">
             <img src="images/16.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
         </a>
