--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
         <div style="background-color:#020308; padding-top:40px; padding-bottom:40px;" class="TimerInfos">
             <div id="infos" style="font-weight: bold; margin-bottom: 10px;">Countdown</div>
+            <div id="Informationen" style="line-height: 20px; margin-top: 10px; font-size: 17px;">10. März:<br>Palais Kaufmännischer Verein</div>
         
             <div id="gradient" class="launch-time" style="background: linear-gradient(90deg, #a37a1d, #d3a74d, #ffeb94, #e6bd69, #ffd77c, #b58e3d, #956e14); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
                 <div>
@@ -233,7 +234,7 @@
             </div>
         </section>
 
-        <div id="infos" style="font-weight: bold;"><br>Karten</div>
+        <div id="infos" style="font-weight: bold;"><br>Kartenpreise</div>
         <div id="Karten">
             <img src="images/Karte2.png" class="Karte" style="width: 60%"></img>
             <div id="Informationen" style="line-height: 20px; margin-top: 10px;">Eintrittskarte - Vorverkauf<br>Schüler/Studenten</div>
