--- a/index.html
+++ b/index.html
@@ -248,9 +248,7 @@
         <div id="infos" style="font-weight: bold;"><br>Tischplatzreservierung</div>
 
         <div id="PostInformationen" style="line-height: 20px;">
-                Tischplatz im Spiegelsaal: 7€
-                <br>
-                Tischplatz im Festsaal: 7€
+                Tischplatz: 7€
                 <br>
                 9er Loge (inkl. 9 Karten): 360€
                 <br>
