--- a/sponsorings.html
+++ b/sponsorings.html
@@ -147,7 +147,7 @@
             <img src="images/4.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.hypo.at/de/home.html">
-            <img src="images/14.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/14.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.ballettschule-linz.at/">
             <img src="images/8.gif" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
