--- a/sponsorings.html
+++ b/sponsorings.html
@@ -50,9 +50,6 @@
                         <a href="sponsorings.html" class="nav-link">Sponsoren</a>
                     </li>
                     <li class="nav-item">
-                        <a href="datenschutz.html" class="nav-link">Datenschutz</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="https://www.instagram.com/fadiball_2023/" class="nav-link">
                             <img src="images/ig.png" class="ig" style="scale: 5%; margin-bottom: -155px; margin-top: -170px;"></img>
                         </a>
@@ -156,6 +153,15 @@
             <img src="images/13.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
         </a>
 
+
+        <div class="lalalala">
+            <div id="c2">
+                <a href = "impressum.html">Impressum</a>
+            </div>
+            <div id="c3">
+                <a href = "datenschutz.html">Datenschutz</a>
+            </div>
+        </div>
 
         <div id="c">
             COPYRIGHT © 2023 | FADIBALL
