--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <div style="background-color:#020308; padding-top:40px; padding-bottom:40px;" class="TimerInfos">
-            <div id="Informationen" style="line-height: 20px; margin-top: 10px; font-size: 17px;">10. März 2023:<br>Palais Kaufmännischer Verein</div>
+            <div id="Informationen" style="line-height: 20px; margin-top: 10px; font-size: 17px;">10. März 2023<br>Palais Kaufmännischer Verein</div>
             <div id="infos" style="font-weight: bold; margin-bottom: 10px;">Countdown</div>
         
             <div id="gradient" class="launch-time" style="background: linear-gradient(90deg, #a37a1d, #d3a74d, #ffeb94, #e6bd69, #ffd77c, #b58e3d, #956e14); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
