--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="sponsorings.html" class="nav-link">Sponsoren</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.instagram.com/fadiball_2023/" class="nav-link">
+                        <a href="https://www.instagram.com/fadiball_2023/" class="nav-link igimg">
                             <img src="images/ig.png" class="ig" style="scale: 5%; margin-bottom: -155px; margin-top: -170px;"></img>
                         </a>
                     </li>
@@ -89,15 +89,19 @@
         <div class="container123 fileImage">
             <h1>ㅤ</h1>
         </div>
+        <div class="container123D fileImageD">
+            <h1>ㅤ</h1>
+        </div>
 
         <div class="image fileImage">
             <p style="background-image: url('images/palaisMOBILE.png');" class="fileImage"></p>
+            <p style="background-image: url('images/palais2.png');" class="fileImageD"></p>
 
             <img src="images/x.svg" class="fileImage1"></img>
         </div>
 
         <div style="background-color:#020308; padding-top:40px; padding-bottom:40px;" class="TimerInfos">
-            <div id="Informationen" style="line-height: 20px; margin-top: 10px; font-size: 17px;">10. März 2023<br>Palais Kaufmännischer Verein</div>
+            <div id="Inf2" style="line-height: 20px; margin-top: 10px;">10. März 2023<br>Palais Kaufmännischer Verein</div>
             <div id="infos" style="font-weight: bold; margin-bottom: 10px;">Countdown</div>
         
             <div id="gradient" class="launch-time" style="background: linear-gradient(90deg, #a37a1d, #d3a74d, #ffeb94, #e6bd69, #ffd77c, #b58e3d, #956e14); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
@@ -205,7 +209,7 @@
                 </div> 
     
                 <div class="cd-timeline-content container reveal">
-                    <h2 style="margin-top: 15px;">Mitternachts-einlage</h2>
+                    <h2 class="mitternacht" style="margin-top: 15px;"></h2>
                     <p style="margin-top: -5px;">00:00 Uhr</p>
                 </div>
             </div>
@@ -233,16 +237,20 @@
 
         <div id="infos" style="font-weight: bold;"><br>Kartenpreise</div>
         <div id="Karten">
-            <img src="images/Karte2.png" class="Karte" style="width: 60%"></img>
-            <div id="Informationen" style="line-height: 20px; margin-top: 10px;">Eintrittskarte - Vorverkauf<br>Schüler/Studenten</div>
-            <div id="Preis" style="line-height: 20px; margin-top: -15px;">20€</div>
+            <div class="Karte1">
+                <img src="images/Karte2.png" class="Karte"></img>
+                <div id="Informationen" style="line-height: 20px; margin-top: 10px;">Eintrittskarte - Vorverkauf<br>Schüler/Studenten</div>
+                <div id="Preis" style="line-height: 20px; margin-top: -15px;">20€</div>
+            </div>
 
-            <img src="images/Karte2.png" class="Karte" style="width: 60%; margin-top: 10px;"></img>
-            <div id="Informationen" style="line-height: 20px; margin-top: 10px;">Eintrittskarte - Vorverkauf<br>Erwachsene</div>
-            <div id="Preis" style="line-height: 20px; margin-top: -15px;">23€</div>
+            <div class="Karte2">
+                <img src="images/Karte2.png" class="Karte"></img>
+                <div id="Informationen" style="line-height: 20px; margin-top: 10px;">Eintrittskarte - Vorverkauf<br>Erwachsene</div>
+                <div id="Preis" style="line-height: 20px; margin-top: -15px;">23€</div>
+            </div>
         </div>
 
-        <div id="infos" style="font-weight: bold;"><br>Tischplatzreservierung</div>
+        <div id="Tisch" style="font-weight: bold;"><br>Tischplatzreservierung</div>
 
         <div id="PostInformationen" style="line-height: 20px;">
                 Tischplatz: 7€
@@ -295,7 +303,7 @@
         </div>
 
         <a href="https://alfasolutions.at/">
-            <img src="images/11.png" class="sponsoring" style="width: 50%; margin-bottom: -30px;"></img>
+            <img src="images/11.png" class="sponsoring alfa" style="margin-bottom: -30px;"></img>
         </a>
 
 
