--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         <a href="sponsorings.html" class="nav-link">Sponsoren</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.instagram.com/fadiball_2023/" class="nav-link">
+                        <a href="https://www.instagram.com/fadiball_2023/" class="nav-link igimg">
                             <img src="images/ig.png" class="ig" style="scale: 5%; margin-bottom: -155px; margin-top: -170px;"></img>
                         </a>
                     </li>
@@ -88,9 +88,13 @@
         <div class="container123 fileImage">
             <h1>ㅤ</h1>
         </div>
+        <div class="container123D fileImageD">
+            <h1>ㅤ</h1>
+        </div>
 
         <div class="image fileImage">
             <p style="background-image: url('images/palaisMOBILE.png');" class="fileImage"></p>
+            <p style="background-image: url('images/palais2.png');" class="fileImageD"></p>
 
             <img src="images/x.svg" class="fileImage1"></img>
         </div>
@@ -130,7 +134,7 @@
     </div>
 
     <a href="https://alfasolutions.at/">
-        <img src="images/11.png" class="sponsoring" style="width: 50%; margin-bottom: -30px;"></img>
+        <img src="images/11.png" class="sponsoring alfa" style="margin-bottom: -30px;"></img>
     </a>
 
         <div id="c">
