--- a/sponsorings.html
+++ b/sponsorings.html
@@ -50,7 +50,7 @@
                         <a href="sponsorings.html" class="nav-link">Sponsoren</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.instagram.com/fadiball_2023/" class="nav-link">
+                        <a href="https://www.instagram.com/fadiball_2023/" class="nav-link igimg">
                             <img src="images/ig.png" class="ig" style="scale: 5%; margin-bottom: -155px; margin-top: -170px;"></img>
                         </a>
                     </li>
@@ -88,9 +88,13 @@
         <div class="container123 fileImage">
             <h1>ㅤ</h1>
         </div>
+        <div class="container123D fileImageD">
+            <h1>ㅤ</h1>
+        </div>
 
         <div class="image fileImage">
             <p style="background-image: url('images/palaisMOBILE.png');" class="fileImage"></p>
+            <p style="background-image: url('images/palais2.png');" class="fileImageD"></p>
 
             <img src="images/x.svg" class="fileImage1"></img>
         </div>
@@ -102,55 +106,55 @@
         <div id="infos" style="font-weight: bold; margin-bottom: 50px;">Unsere Sponsoren</div>
 
         <a href="https://alfasolutions.at/">
-            <img src="images/11.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/11.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.gynaekologie-steiger.at/">
-            <img src="images/9.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/9.jpg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a>
-            <img src="images/Raiffeisen.svg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/Raiffeisen.svg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://hnw-rechtsanwaelte.at/">
-            <img src="images/1.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/1.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="http://www.tb-mondi.at/">
-            <img src="images/5.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/5.jpg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
 
 
 
         <a href="https://www.wsg.at/">
-            <img src="images/16.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/16.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://ooewohnbau.at/start">
-            <img src="images/17.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/17.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.keinesorgen.at/">
-            <img src="images/6.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/6.jpg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://fahrschule-lindauer.at/">
-            <img src="images/7.svg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/7.svg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.solvistas.com/de">
-            <img src="images/12.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/12.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.elfin.at/">
-            <img src="images/15.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/15.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a>
-            <img src="images/3.jpeg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/3.jpeg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://hegh.at/de/startseite.html">
-            <img src="images/4.jpg" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/4.jpg" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.hypo.at/de/home.html">
-            <img src="images/14.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/14.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="https://www.ballettschule-linz.at/">
-            <img src="images/8.gif" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/8.gif" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
         <a href="http://www.hifi-tv.at/">
-            <img src="images/13.png" class="sponsoring" style="width: 50%; margin-bottom: 30px;"></img>
+            <img src="images/13.png" class="sponsoring sponsoring2" style="margin-bottom: 30px;"></img>
         </a>
 
 
