--- a/contact.html
+++ b/contact.html
@@ -126,16 +126,14 @@
 
     <div class="lalalala">
         <div id="c2">
-            <a href = "impressum.html">Impressum</a>
+            <a class="rndu" href = "impressum.html">Impressum</a>
         </div>
         <div id="c3">
-            <a href = "datenschutz.html">Datenschutz</a>
+            <a class="rndu" href = "datenschutz.html">Datenschutz</a>
         </div>
     </div>
 
-    <a href="https://alfasolutions.at/">
-        <img src="images/11.png" class="sponsoring alfa" style="margin-bottom: -30px;"></img>
-    </a>
+
 
         <div id="c">
             COPYRIGHT © 2023 | FADIBALL
