--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@
                 </div>
                 <div>
                     <p id="seconds">00</p>
-                    <span class="time">Sekunden</span>
+                    <span class="time">Sekundenssssssssssss</span>
                 </div>
             </div>
         </div>
             <script>
-                var countDownDate = new Date("Mar 10, 2023 00:19:00").getTime();
+                var countDownDate = Date.parse("Mar 10, 2023 00:19:00");
+
 
                 var x = setInterval(function(){
                     var now = new Date().getTime();
@@ -287,7 +288,7 @@
         <div id="infos2" style="font-weight: bold;">Wir freuen uns auf euer Kommen!</div>
 
         <a href="https://www.instagram.com/fadiball_2023/">
-            <img src="images/ig.png" class="ig" ></img>
+            <img src="images/ig.png" class="ig"></img>
         </a>
 
 
