--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                         <h2>Kartenanfrage</h2>
                         <input name="name" id="Name" type="text" class="field" placeholder="Name" required>
                         <input name="email" id="Email" type="text" class="field" placeholder="Email" required>
-                        <input name="message" id="Message" placeholder="Anzahl" required>
-                        <select name="art" id"Art" placeholder"Kartenart">
+                        <input name="message" id="Message" type"number" class="field" placeholder="Anzahl" required>
+                        <select name="select" id"Art" class="field" placeholder"Kartenart">
                             <option value "S">Schüler/ Studenten</option>
                             <option value "E">Erwachsenen</option>
                         </select>
