--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@
                 <div class="contact-box" style="background-color: #020308;">
                     <div class="contactpadding">
     
-                    <form action="https://formsubmit.co/melv.m@gmx.at" method="POST" />
+                    <form action="https://formsubmit.co/melv.m@icloud.com" method="POST" />
                         <h2>Kartenanfrage</h2>
                         <input name="name" id="Name" type="text" class="field" placeholder="Name" required>
                         <input name="email" id="Email" type="text" class="field" placeholder="Email" required>
                         <input name="message" id="Message" type"number" class="field" placeholder="Anzahl" required>
-                        <select name="select" id"Art" class="field" placeholder"Kartenart">
+                        <select name="select" id"Select" class="field" placeholder"Kartenart">
                             <option value "S">Schüler/ Studenten</option>
                             <option value "E">Erwachsenen</option>
                         </select>
