--- a/index.html
+++ b/index.html
@@ -277,10 +277,12 @@
                         <input name="name" id="Name" type="text" class="field" placeholder="Name" required>
                         <input name="email" id="Email" type="text" class="field" placeholder="Email" required>
                         <input name="message" id="Message" type"number" class="field" placeholder="Anzahl" required>
-                        <select name="select" id"Select" class="field" placeholder"Kartenart">
-                            <option value "S">Schüler/ Studenten</option>
-                            <option value "E">Erwachsenen</option>
-                        </select>
+                        
+                        <label for="select" class="field">Kartenart</label>
+                            <select name="select" id"select" class="field">
+                                <option value "S">Schüler/ Studenten</option>
+                                <option value "E">Erwachsenen</option>
+                            </select>
                         <button type="submit" class="btn">Senden</button>
                     </form>
     
